--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,6 @@ body {
   cursor: pointer;
   position:relative;
   top: 5px;
-  
 }
 
 .displayRow {
@@ -111,6 +110,8 @@ body {
 }
 
 .saveButton {
+  display: flex;
+  align-items:center;
    min-width: 50%;
    text-align: left;
 }
@@ -158,7 +159,10 @@ body {
   line-height: 21px;
   letter-spacing: 0em;
   text-align: left;
+}
 
+.listTitle {
+  margin-bottom: 5px;
 }
 
 .savedResults {
